# identity/model.go
@@ -1,8 +1,18 @@
 package identity
 
-import "github.com/nuts-foundation/go-did/did"
+import (
+	"github.com/nuts-foundation/go-did/did"
+	"github.com/nuts-foundation/go-did/vc"
+	"github.com/nuts-foundation/nuts-admin/discovery"
+)
 
 type Identity struct {
 	Name string  `json:"name"`
 	DID  did.DID `json:"did"`
+}
+
+type IdentityDetails struct {
+	Identity
+	DiscoveryServices []discovery.DIDStatus     `json:"discovery_services"`
+	WalletCredentials []vc.VerifiableCredential `json:"wallet_credentials"`
 }
